--- a/.gitignore
+++ b/.gitignore
@@ -274,4 +274,7 @@ dmypy.json
 # profiling data
 .prof
 
+# secret
+secrets.json
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,pycharm,python
